--- a/style.css
+++ b/style.css
@@ -1,31 +1,64 @@
 
 body {
-  height: 100%;
+  height: 150vh;
+  margin: 0;
 }
 
 h1 {
   color: blue;
 }
 
-.container {
+.header {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   height: 100px;
-  width: 1800px;
   align-items: center;
-  margin: 0 auto;
+  border-bottom: 1px solid black;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  position: sticky;
+  top: 0;
+}
+
+.drop-down {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr)
+}
+
+.drop-down ul {
+  grid-column: 11;
+  font-size: 30px;
+  list-style: none;
+  padding: 10px;
+}
+
+.drop-down ul * {
+  margin: 10px;
 }
 
 .img-class {
   display: block;
+  height: 100%;
 }
 
-.container img  {
+.header img  {
   width: 100%;
-  height: 100px;
+  height: 80px;
+  padding: 10px 0;
   object-fit: contain;
+  vertical-align: middle;
 }
 
-.header-logo {
+.menu-logo {
   grid-column: 12;
+  justify-self: center;
+}
+
+.navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background: #fff;
 }
