--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body {
   position: sticky;
   top: 0;
   background-color: #fff;
+  z-index: 1;
 }
 
 .drop-down {
@@ -74,12 +75,11 @@ body {
   width: 2em;
 }
 
+.nav-container {
+  position: fixed;
+}
+
 .navigation {
-  margin-top: 10px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
   height: 100vh;
   background: #fff;
 }
